prepare for 1.0.0 release